--- a/.github/workflows/static_testing.yml
+++ b/.github/workflows/static_testing.yml
@@ -4,7 +4,13 @@ name: Static code analysis
 run-name: ${{ github.actor }} is doing static code analysis.
 
 # Controls when the workflow will run
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches-ignore:
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
