--- a/.github/workflows/static_testing.yml
+++ b/.github/workflows/static_testing.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - update/workflow
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,6 +27,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y clang clang-tools
+        sudo apt-get install -y build-essential libx11-dev libglfw3-dev
+        sudo apt-get install -y libglfw3 xorg-dev cmake
 
     - name: Run clang static analyzer
       run: |
